# tiffeditor

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  example_usage.py  pyproject.toml  tiffeditor.py
tiffeditor/: __init__.py  tiffeditor.py
